tester = executable('tester', 'tester.cpp', dependencies : [nxas_dep])

tests_expressions = [
    ['NOP',            '0x50b0000000070f00'],
    ['NOP.TRIG',       '0x50b0000000072f00'],
    ['NOP CC.F',       '0x50b0000000070000'],
    ['NOP CC.LT',      '0x50b0000000070100'],
    ['NOP CC.EQ',      '0x50b0000000070200'],
    ['NOP CC.LE',      '0x50b0000000070300'],
    ['NOP CC.GT',      '0x50b0000000070400'],
    ['NOP CC.NE',      '0x50b0000000070500'],
    ['NOP CC.GE',      '0x50b0000000070600'],
    ['NOP CC.NUM',     '0x50b0000000070700'],
    ['NOP CC.NAN',     '0x50b0000000070800'],
    ['NOP CC.LTU',     '0x50b0000000070900'],
    ['NOP CC.EQU',     '0x50b0000000070a00'],
    ['NOP CC.LEU',     '0x50b0000000070b00'],
    ['NOP CC.GTU',     '0x50b0000000070c00'],
    ['NOP CC.NEU',     '0x50b0000000070d00'],
    ['NOP CC.GEU',     '0x50b0000000070e00'],
    ['NOP CC.T',       '0x50b0000000070f00'],
    ['NOP CC.OFF',     '0x50b0000000071000'],
    ['NOP CC.LO',      '0x50b0000000071100'],
    ['NOP CC.SFF',     '0x50b0000000071200'],
    ['NOP CC.LS',      '0x50b0000000071300'],
    ['NOP CC.HI',      '0x50b0000000071400'],
    ['NOP CC.SFT',     '0x50b0000000071500'],
    ['NOP CC.HS',      '0x50b0000000071600'],
    ['NOP CC.OFT',     '0x50b0000000071700'],
    ['NOP CC.CSM_TA',  '0x50b0000000071800'],
    ['NOP CC.CSM_TR',  '0x50b0000000071900'],
    ['NOP CC.CSM_MX',  '0x50b0000000071a00'],
    ['NOP CC.FCSM_TA', '0x50b0000000071b00'],
    ['NOP CC.FCSM_TR', '0x50b0000000071c00'],
    ['NOP CC.FCSM_MX', '0x50b0000000071d00'],
    ['NOP CC.RLE',     '0x50b0000000071e00'],
    ['NOP CC.RGT',     '0x50b0000000071f00'],
    ['NOP 0x3',        '0x50b0000000370000'],
    ['NOP CC.OFF, 0x80',           '0x50b0000008071000'],
    ['MOV R0, R1',                 '0x5c98078000170000'],
    ['MOV RZ, RZ, 0x5',            '0x5c9802800ff700ff'],
    ['MOV R8, c[0x3][0x20]',       '0x4c98078c00870008'],
    ['MOV R2, c[0x10][0x90], 0x8', '0x4c98044002470002'],
    ['MOV R1, 0x3d',               '0x3898078003d70001'],
    ['MOV R2, -0xa30, 0x8',        '0x3998047f5d070002'],
    ['MOV32I R0, 0xaaccddee',      '0x010aaccddee7f000'],
    ['MOV32I RZ, 0xdeadbeef, 0x8', '0x010deadbeef780ff'],
    ['FADD RZ, RZ, RZ',                      '0x5c5800000ff7ffff'],
    ['FADD.FTZ R0, R3, R8',                  '0x5c58100000870300'],
    ['FADD.FTZ.RP R0.CC, R1, RZ',            '0x5c5891000ff70100'],
    ['FADD.SAT R0, -|RZ|, R0',               '0x5c5d40000007ff00'],
    ['FADD.RM RZ.CC, -R0, R0',               '0x5c598080000700ff'],
    ['FADD.RZ RZ, |R0|, R0',                 '0x5c584180000700ff'],
    ['FADD RZ, R0, -R1',                     '0x5c582000001700ff'],
    ['FADD RZ, R0, |R1|',                    '0x5c5a0000001700ff'],
    ['FADD RZ, RZ, c[0x0][0xae0]',           '0x4c5800002b87ffff'],
    ['FADD.RM.SAT RZ.CC, RZ, -c[0x4][0xac]', '0x4c5ca09002b7ffff'],
    ['FADD R0, R1, |c[0x0][0x0]|',           '0x4c5a000000070100'],
    ['FADD.FTZ R0, R0, 0.0',                 '0x3858100000070000'],
    ['FADD.FTZ R0, R0, 1.0',                 '0x3858103f80070000'],
    ['FADD.FTZ R0, R0, 2.0',                 '0x3858104000070000'],
    ['FADD.FTZ R0, R0, 50',                  '0x3858104248070000'],
    ['FADD.FTZ R0, R0, -1.0',                '0x3958103f80070000'],
    ['FADD.FTZ R0, R0, 1.5',                 '0x3858103fc0070000'],
    ['FSETP.F.AND P0, P1, R2, R3, P4',  '0x5bb0020000370201'],
    ['FSETP.F.AND P0, P1, R2, R3, !P4', '0x5bb0060000370201'],
    ['FSETP.F.OR P0, P1, R2, R3, P4',   '0x5bb0220000370201'],
    ['FSETP.F.XOR P0, P1, R2, R3, P4',  '0x5bb0420000370201'],
    ['FSETP.F.OR P0, P1, -R2, R3, P4',  '0x5bb02a0000370201'],
    ['FSETP.F.OR P0, P1, |R2|, R3, P4', '0x5bb0220000370281'],
    ['FSETP.F.OR P0, P1, R2, -R3, P4',  '0x5bb0220000370241'],
    ['FSETP.F.OR P0, P1, R2, |R3|, P4', '0x5bb0320000370201'],
    ['FSETP.LT.OR PT, PT, RZ, RZ, PT',  '0x5bb123800ff7ff3f'],
    ['FSETP.EQ.OR PT, PT, RZ, RZ, PT',  '0x5bb223800ff7ff3f'],
    ['FSETP.LE.OR PT, PT, RZ, RZ, PT',  '0x5bb323800ff7ff3f'],
    ['FSETP.GT.OR PT, PT, RZ, RZ, PT',  '0x5bb423800ff7ff3f'],
    ['FSETP.NE.OR PT, PT, RZ, RZ, PT',  '0x5bb523800ff7ff3f'],
    ['FSETP.GE.OR PT, PT, RZ, RZ, PT',  '0x5bb623800ff7ff3f'],
    ['FSETP.NUM.OR PT, PT, RZ, RZ, PT', '0x5bb723800ff7ff3f'],
    ['FSETP.NAN.OR PT, PT, RZ, RZ, PT', '0x5bb823800ff7ff3f'],
    ['FSETP.LTU.OR PT, PT, RZ, RZ, PT', '0x5bb923800ff7ff3f'],
    ['FSETP.EQU.OR PT, PT, RZ, RZ, PT', '0x5bba23800ff7ff3f'],
    ['FSETP.LEU.OR PT, PT, RZ, RZ, PT', '0x5bbb23800ff7ff3f'],
    ['FSETP.GTU.OR PT, PT, RZ, RZ, PT', '0x5bbc23800ff7ff3f'],
    ['FSETP.NEU.OR PT, PT, RZ, RZ, PT', '0x5bbd23800ff7ff3f'],
    ['FSETP.GEU.OR PT, PT, RZ, RZ, PT', '0x5bbe23800ff7ff3f'],
    ['FSETP.T.OR PT, PT, RZ, RZ, PT',   '0x5bbf23800ff7ff3f'],
    ['FSETP.T.OR PT, PT, R8, -5.5, PT', '0x37bf23c0b007083f'],
    ['FCMP.T R0, R0, RZ, R2',            '0x5baf01000ff70000'],
    ['FCMP.NE R0, R0, c[0x1][0x4], R2',  '0x4ba5010400170000'],
    ['FCMP.NAN R0, R0, R2, c[0x4][0x8]', '0x53a8011000270000'],
    ['FCMP.LT.FTZ R0, R0, -32, R2',      '0x37a1814200070000'],
    ['FSETP.T.OR PT, PT, R2, INF .NEG.ABS, PT', '0x36bf33ff8007027f'],
    ['FSETP.T.OR PT, PT, R3, -INF .NEG, PT',    '0x37bf23ff8007037f'],
    ['FSETP.T.OR PT, PT, R5, +QNAN .ABS, PT',   '0x36bf33ffc007053f'],
    ['FSETP.T.OR PT, PT, R4, -QNAN, PT',        '0x37bf23ffc007043f'],
    ['F2F R0, -32.390625',               '0x39a8004201970a00'],
    ['F2F R0, QNAN.NEG.ABS',             '0x38aa207fc0070a00'],
    ['F2F R0, -R4',                      '0x5ca8200000470a00'],
    ['F2F R3.CC, c[0][4]',               '0x4ca8800000170a03'],
    ['F2F.F16.F32 RZ, R0',               '0x5ca80000000709ff'],
    ['F2F.F16.F16 RZ, -R0.H1',           '0x5ca82200000705ff'],
    ['F2F.F64.F32 RZ, |R0|',             '0x5caa000000070bff'],
    ['F2F.F64.F64 RZ, R1',               '0x5ca8000000170fff'],
    ['F2F.FTZ.F64.F64 RZ, R1',           '0x5ca8100000170fff'],
    ['F2F.F64.F64.ROUND RZ, RZ',         '0x5ca804000ff70fff'],
    ['F2F.F64.F64.FLOOR RZ, RZ',         '0x5ca804800ff70fff'],
    ['F2F.F64.F64.CEIL RZ, RZ',          '0x5ca805000ff70fff'],
    ['F2F.F64.F64.TRUNC RZ, RZ',         '0x5ca805800ff70fff'],
    ['F2F.F64.F32.RN RZ, RZ',            '0x5ca800000ff70bff'],
    ['F2F.F64.F32.RM RZ, RZ',            '0x5ca800800ff70bff'],
    ['F2F.F64.F32.RP RZ, RZ',            '0x5ca801000ff70bff'],
    ['F2F.F64.F32.RZ RZ, RZ',            '0x5ca801800ff70bff'],
    ['F2F.FTZ.F64.F64.TRUNC.SAT RZ, RZ', '0x5cac15800ff70fff'],
    ['@!PT LOP3.LUT.X.NZ RZ.CC, RZ, RZ, RZ, 0xff',       '0x5be7ffffffffffff'],
    ['@!PT LOP3.LUT RZ.CC, RZ, 0x7ffff, RZ, 0xff',       '0x3cffffffffffffff'],
    ['@!PT LOP3.LUT RZ.CC, RZ, c[0x1f][-0x4], RZ, 0xff', '0x02ffffffffffffff'],
    ['foo: BRA foo', '0xe2400fffff87000f'],
    ['Foo: BRA Foo', '0xe2400fffff87000f'],
]
fail_tests_expressions = [
    'F2F !R0, R1',
    'F2F R0, R255',
    'F2F R0, R256',
    'F2F A, RZ',
    '@P7 F2F RZ, RZ',
    '{: BRA {',
    '_: BRA _',
    'FADD R0, RZ, 13a.5',
    'I2I.U32.U32 RZ, 5k',
    'BRA foo',
]

foreach e : tests_expressions
    test(e[0], tester, args : [e[0], e[1]])
endforeach

foreach e : fail_tests_expressions
    test(e, tester, args : e, should_fail : true)
endforeach
